Fixed minor layout issues in audio player and gallery

--- a/librarian_filemanager/static/css/filemanager.css
+++ b/librarian_filemanager/static/css/filemanager.css
@@ -1682,8 +1682,9 @@ div.mejs-speed-button {
   padding: 1rem;
   overflow: hidden;
   text-align: center;
+  white-space: nowrap;
 }
-/* line 32, ../../../src/scss/partials/_image.scss */
+/* line 33, ../../../src/scss/partials/_image.scss */
 .gallery-container .gallery-current-image img {
   max-width: 100%;
   max-height: 100%;
@@ -1694,11 +1695,11 @@ div.mejs-speed-button {
   -webkit-transition: top 0.3s, left 0.3s;
   transition: top 0.3s, left 0.3s;
 }
-/* line 40, ../../../src/scss/partials/_image.scss */
+/* line 41, ../../../src/scss/partials/_image.scss */
 .gallery-container .gallery-current-image img.zoomable {
   cursor: zoom-in;
 }
-/* line 44, ../../../src/scss/partials/_image.scss */
+/* line 45, ../../../src/scss/partials/_image.scss */
 .gallery-container .gallery-current-image img.zoomed {
   position: absolute;
   top: 0;
@@ -1707,7 +1708,7 @@ div.mejs-speed-button {
   max-height: none;
   cursor: zoom-out;
 }
-/* line 55, ../../../src/scss/partials/_image.scss */
+/* line 56, ../../../src/scss/partials/_image.scss */
 .gallery-container .gallery-current-image:after {
   content: '';
   display: inline-block;
@@ -1716,7 +1717,7 @@ div.mejs-speed-button {
   vertical-align: middle;
 }
 
-/* line 66, ../../../src/scss/partials/_image.scss */
+/* line 67, ../../../src/scss/partials/_image.scss */
 .gallery-control {
   position: absolute;
   top: 3rem;
@@ -1738,7 +1739,7 @@ div.mejs-speed-button {
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
-/* line 77, ../../../src/scss/partials/_image.scss */
+/* line 78, ../../../src/scss/partials/_image.scss */
 .gallery-control .icon {
   display: inline-block;
   position: absolute;
@@ -1750,11 +1751,11 @@ div.mejs-speed-button {
   text-align: center;
   text-shadow: 0px 1px black;
 }
-/* line 89, ../../../src/scss/partials/_image.scss */
+/* line 90, ../../../src/scss/partials/_image.scss */
 .gallery-control .label {
   display: none;
 }
-/* line 93, ../../../src/scss/partials/_image.scss */
+/* line 94, ../../../src/scss/partials/_image.scss */
 .gallery-control.gallery-control-previous {
   -moz-border-radius-topright: 2rem;
   -webkit-border-top-right-radius: 2rem;
@@ -1763,7 +1764,7 @@ div.mejs-speed-button {
   -webkit-border-bottom-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
-/* line 98, ../../../src/scss/partials/_image.scss */
+/* line 99, ../../../src/scss/partials/_image.scss */
 .gallery-control.gallery-control-next {
   -moz-border-radius-topleft: 2rem;
   -webkit-border-top-left-radius: 2rem;
@@ -1772,7 +1773,7 @@ div.mejs-speed-button {
   -webkit-border-bottom-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
 }
-/* line 103, ../../../src/scss/partials/_image.scss */
+/* line 104, ../../../src/scss/partials/_image.scss */
 .gallery-control:hover {
   opacity: 1;
   color: white;
@@ -1781,17 +1782,17 @@ div.mejs-speed-button {
   animation-name: none;
 }
 
-/* line 116, ../../../src/scss/partials/_image.scss */
+/* line 117, ../../../src/scss/partials/_image.scss */
 .gallery-control-previous {
   left: 0;
 }
 
-/* line 120, ../../../src/scss/partials/_image.scss */
+/* line 121, ../../../src/scss/partials/_image.scss */
 .gallery-control-next {
   right: 0;
 }
 
-/* line 124, ../../../src/scss/partials/_image.scss */
+/* line 125, ../../../src/scss/partials/_image.scss */
 .gallery-image-title {
   margin-top: 1rem;
   max-width: 30%;
@@ -1803,11 +1804,11 @@ div.mejs-speed-button {
   background: rgba(0, 0, 0, 0.7);
 }
 
-/* line 137, ../../../src/scss/partials/_image.scss */
+/* line 138, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list {
   padding: 1rem;
 }
-/* line 140, ../../../src/scss/partials/_image.scss */
+/* line 141, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item {
   position: relative;
   top: 0;
@@ -1825,14 +1826,14 @@ div.mejs-speed-button {
   -webkit-transition: opacity 0.3s, box-shadow 0.5s, top 0.5s;
   transition: opacity 0.3s, box-shadow 0.5s, top 0.5s;
 }
-/* line 153, ../../../src/scss/partials/_image.scss */
+/* line 154, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item:hover, .views-sidebar-image .playlist-list .gallery-list-item:focus {
   top: -3px;
   -moz-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.4);
   box-shadow: 0 3px 20px rgba(0, 0, 0, 0.4);
 }
-/* line 159, ../../../src/scss/partials/_image.scss */
+/* line 160, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item a {
   display: inline-block;
   width: 100%;
@@ -1841,28 +1842,28 @@ div.mejs-speed-button {
   background: white;
   text-align: center;
 }
-/* line 167, ../../../src/scss/partials/_image.scss */
+/* line 168, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item a:after {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 175, ../../../src/scss/partials/_image.scss */
+/* line 176, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item img {
   max-width: 100%;
   max-height: 100%;
   vertical-align: middle;
 }
-/* line 182, ../../../src/scss/partials/_image.scss */
+/* line 183, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item-current {
   opacity: 0.5;
 }
-/* line 185, ../../../src/scss/partials/_image.scss */
+/* line 186, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item-current a {
   cursor: default;
 }
-/* line 189, ../../../src/scss/partials/_image.scss */
+/* line 190, ../../../src/scss/partials/_image.scss */
 .views-sidebar-image .playlist-list .gallery-list-item-current:hover, .views-sidebar-image .playlist-list .gallery-list-item-current:focus {
   top: 0;
   -moz-box-shadow: 0 0 0 transparent;
@@ -2085,21 +2086,23 @@ div.mejs-speed-button {
   top: 0;
   left: 0;
   width: 100%;
+  white-space: normal;
   background: rgba(0, 0, 0, 0.7);
   color: white;
   text-align: left;
 }
-/* line 89, ../../../src/scss/partials/_audio.scss */
+/* line 90, ../../../src/scss/partials/_audio.scss */
 .audio-controls .audio-controls-albumart .audio-controls-title h2 {
   padding: 2rem 1rem 0.5rem;
   margin: 0;
+  line-height: 110%;
 }
-/* line 94, ../../../src/scss/partials/_audio.scss */
+/* line 96, ../../../src/scss/partials/_audio.scss */
 .audio-controls .audio-controls-albumart .audio-controls-title p {
   padding: 0 1rem;
   font-style: italic;
 }
-/* line 101, ../../../src/scss/partials/_audio.scss */
+/* line 103, ../../../src/scss/partials/_audio.scss */
 .audio-controls .audio-controls-audio-wrapper {
   position: absolute;
   bottom: 1rem;
