--- a/src/scss/partials/_audio.scss
+++ b/src/scss/partials/_audio.scss
@@ -80,6 +80,7 @@ $albumart-perspective: 300%;
       top: 0;
       left: 0;
       width: 100%;
+      white-space: normal;
 
       // Styling
       background: transparentize(black, 0.3);
@@ -89,6 +90,7 @@ $albumart-perspective: 300%;
       h2 {
         padding: 2rem 1rem 0.5rem;
         margin: 0;
+        line-height: 110%;
       }
 
       p {
