--- a/src/scss/partials/_image.scss
+++ b/src/scss/partials/_image.scss
@@ -28,6 +28,7 @@ $current-image-size: 300px;
     padding: 1rem;
     overflow: hidden;
     text-align: center;
+    white-space: nowrap;
 
     img {
       max-width: 100%;
